# autorag

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: model.yaml  pipeline.yaml
docker/: Dockerfile.backend
docs/adr/: 001-vector-store-abstraction.md  002-decision-engine-design.md
frontend/: Dockerfile
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ApiKeysDrawer.tsx  DeploymentsList.tsx  Playground.tsx  UploadDataset.tsx
src/: main.py
src/api/: routers.py
src/cli/: main.py
src/core/: config.py  exceptions.py  logging.py  schemas.py
src/db/: models.py
src/engine/: adapters.py  decision.py
src/pipeline/: indexer.py
src/runtime/: rag.py
src/services/: analysis.py  embedding_registry.py  ingestion.py
tests/: test_analysis.py  test_decision_engine.py  test_indexer.py  test_ingestion.py  test_routers.py
tests/fixtures/: __init__.py  sample.json  sample.md  sample.txt
