[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autorag-architect"
version = "0.1.0"
description = "Autonomous RAG System Architect & Pipeline Engine"
authors = [
    {name = "AI Engineer", email = "engineer@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "langchain>=0.1.13",
    "langchain-openai>=0.1.1",
    "langchain-community>=0.0.29",
    "sentence-transformers>=2.5.1",
    "chromadb>=0.4.24",
    "pypdf>=4.1.0",
    "python-docx>=1.1.0",
    "markdown>=3.6",
    "beautifulsoup4>=4.12.3",
    "tiktoken>=0.6.0",
    "litellm>=1.34.0",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "black>=24.3.0",
    "isort>=5.13.2",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "typer>=0.12.3"
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
